# nodeless-api

./: .gitignore  Cargo.toml  Nodeless.toml  README.md  docker-compose.yml  index.html
db/migrations/: 20230803212815_create_users_table.down.sql  20230803212815_create_users_table.up.sql  20230804015020_create_stores_table.down.sql  20230804015020_create_stores_table.up.sql  20230804171355_create_checkouts_table.down.sql  20230804171355_create_checkouts_table.up.sql  20230804173025_create_store_invoices_table.down.sql  20230804173025_create_store_invoices_table.up.sql  20230804202245_create_donation_page_table.down.sql  20230804202245_create_donation_page_table.up.sql  20230804203954_create_nodeless_addresses_table.down.sql  20230804203954_create_nodeless_addresses_table.up.sql
src/: config.rs  lib.rs  main.rs
src/handlers/: mod.rs
src/handlers/admin/: mod.rs
src/handlers/api/: mod.rs
src/handlers/frontend/: fe_auth_handlers.rs  fe_donation_page_handlers.rs  fe_store_handlers.rs  mod.rs
src/helpers/: crypto.rs  format.rs  mod.rs  tests.rs
src/middleware/: jwt_middleware.rs  limiter_middleware.rs  mod.rs
src/models/: checkout.rs  donation_page.rs  mod.rs  nodeless_address.rs  store.rs  user.rs
src/repositories/: checkout_repository.rs  donation_page_repository.rs  mod.rs  nodeless_address_repository.rs  store_repository.rs  user_repository.rs
src/services/: checkout_service.rs  mod.rs  store_service.rs
