[package]
name = "nodeless-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
lightning-cluster = "0.1.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono" ] }
hmac = "0.11"
sha2 = "0.9"
hex = "0.4"
dotenvy = "0.15.7"
tokio = "1.29.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.44"
chrono = { version = "0.4", features = ["serde"] }
serde_derive = "1.0"
env_logger = "0.9.0"
jsonwebtoken = "7.1"
toml = "0.5.8"
futures = "0.3.28"
futures-util = "0.3.28"
moka = { version = "0.11", features = ["future"] }
async-trait = "0.1.72"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]